--- a/src/app/pages/analysis-page/analysis-page.component.scss
+++ b/src/app/pages/analysis-page/analysis-page.component.scss
@@ -120,9 +120,9 @@
   }
 
   .heatmap{
-    width: 900px;
-    height: 800px;
-    display:flex;
+    // width: 900px;
+    // height: 800px;
+    // display:flex;
   }
 
   /deep/ ngx-charts-bar-horizontal.level{
