--- a/src/app/pages/map/map.component.scss
+++ b/src/app/pages/map/map.component.scss
@@ -19,6 +19,25 @@
   }
 }
 
+.file-input{
+  display: none;
+}
+
+.file-text{
+    width: 3em;
+    border-radius: 6%;
+    display: inline;
+    padding: 0.4em;
+    margin: 1.2em;
+    color: white;
+    background-color: #ff9800c2;
+}
+
+.mat-raised-button{
+  margin: 0.2em;
+}
+
+
 .reader-image{
   width: 20px;
   height: 20px;
