--- a/src/app/pages/schedule-page/schedule-page.component.html
+++ b/src/app/pages/schedule-page/schedule-page.component.html
@@ -31,7 +31,7 @@
     <app-toolbar [eventStatus]=eventStatus></app-toolbar>
       <div class="page-container">
         <h3>Event Schedule</h3>
-        <div>
+        <div class="scroll-content">
           <!-- <img src="assets/schedule.png"> -->
           <button mat-raised-button class="add-button" color="accent" [routerLink]="['/',eventId,'home','add-schedule']">Add Schedule</button><br />
           <br />
