--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.html
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.html
@@ -12,16 +12,17 @@
   <!-- <div>
     {{scheduleName}}
   </div> -->
-  <button (click)="playAnalysis()">Play</button>
-  <!-- <div class="time-line">
-    <div class="time-point" *ngFor="let timePoint of schedulesArray">
-      <div class="animated-point">
+    <button mat-raised-button color="accent" class="play-button" (click)="playAnalysis()">Play</button>
+    <!-- <div class="time-line">
+      <div class="time-point" *ngFor="let timePoint of schedulesArray">
+        <div class="animated-point">
 
+        </div>
+      </div>
+    </div> -->
+
+    <div *ngIf="map">
+      <div class="heatmap" id="map-canvas" [style.width.px]="map.width *ratio+30" [style.height.px]="map.height*ratio+10">
+        <img [src]="sanitizer.bypassSecurityTrustUrl(map.scale)"  [style.width.px]="map.width *ratio+30" [style.height.px]="map.height*ratio+10">
       </div>
     </div>
-  </div> -->
-
-
-  <div class="heatmap" id="map-canvas" style="width:900px;height:600px;border:2px solid;">
-    <img src="assets/map.png"  width="900" height="600">
-  </div>
