--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -138,7 +138,7 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="heatmap">
-          <app-analysis-heatmap></app-analysis-heatmap>
+          <app-analysis-heatmap [eventId]="eventId"></app-analysis-heatmap>
         </div>
       </mat-expansion-panel>
     </mat-accordion>
