--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -86,8 +86,9 @@
               </tr>
             </table>
 
-            <label class="btn btn-default">
-              <input type="file" (change)="selectFile($event)">
+            <label class="align-map">
+              <input type="file" (change)="selectFile($event)" class="file-input">
+              <div class="file-text">Upload Photo</div>
             </label>
 
             <button mat-raised-button  type="button" name="button" color="primary" (click)="createNewAttendee()">Submit</button>
