--- a/src/app/pages/schedule-page/schedule-page.component.scss
+++ b/src/app/pages/schedule-page/schedule-page.component.scss
@@ -1,11 +1,9 @@
 :host{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 1000px;
 }
-
+.scroll-content{
+  overflow: scroll;
+}
 .sidenav-container{
   height:100%;
 }
