--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -22,7 +22,7 @@
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']" [disabled]="!inprogress">Go Live</button>
     </div>
     <div class="sidediv" *ngIf="booth">
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']" [disabled]="!inprogress">Go Live</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'booth-live']" [disabled]="!inprogress">Go Live</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']" [disabled]="!ended">Analysis</button>
