--- a/src/app/pages/booth-live-page/booth-live-page.component.html
+++ b/src/app/pages/booth-live-page/booth-live-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="participants">
+<!-- <div *ngIf="participants">
   <div *ngFor="let booth of participants" class="booth-container">
     <div [style.color] ="booth.ranking == 1? 'red': 'black'">
       {{booth.reader.mac}}
@@ -10,4 +10,9 @@
       {{participant.participantName}}
     </div>
   </div>
+</div> -->
+<button mat-raised-button color="accent" [routerLink]="['/',eventId,'home']">Back</button>
+<div *ngIf="map && participants">
+  <!-- <app-d3-map-container [map]="map" [participants]="participants" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container> -->
+  <app-booth-image [map]="map" [windowWidth]="windowWidth" [windowHeight]="windowHeight" [participants]="participants"></app-booth-image>
 </div>
