--- a/src/app/pages/booth-live-page/booth-live-page.component.scss
+++ b/src/app/pages/booth-live-page/booth-live-page.component.scss
@@ -1,8 +1,7 @@
 .booth-container{
   display: flex;
   margin-left: 5em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-right: 5em;
 }
 
 .break{
