--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
   <div class="front-text">
-    <h5>Current Event Status: {{eventStatus}}</h5>
+    {{pageName}}
   </div>
 
   <div class="end-buttons">
