--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -1,6 +1,3 @@
-<!-- Toolbar -->
-<!-- <app-toolbar [pageName] = "pageName"></app-toolbar> -->
-
 <!-- Navigation Bar -->
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
@@ -32,7 +29,7 @@
 
   <!-- main content -->
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
+    <app-toolbar [pageName]=pageName></app-toolbar>
     <div class="page-container">
       <h3>Attendee List</h3>
       <!-- Add New Attendee Button-->
