--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -31,7 +31,7 @@
 
 
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
+    <app-toolbar [pageName]=pageName></app-toolbar>
     <div class="page-content">
       <h3>Map Settings</h3>
       <div>
