--- a/src/app/pages/schedule-page/schedule-page.component.html
+++ b/src/app/pages/schedule-page/schedule-page.component.html
@@ -28,7 +28,7 @@
 
 
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
+    <app-toolbar [pageName]=pageName></app-toolbar>
       <div class="page-container">
         <h3>Event Schedule</h3>
         <div class="scroll-content">
