--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -4,12 +4,8 @@
     top: 0;
     width:100%;
     height: 2.4em;
-    z-index:100;
-    background-color: #77878c;
-    color: white;
-    box-shadow: 0px -20px 20px 0px rgba(0, 0, 0, 0.14), 0px -20px 20px 0px rgba(0, 0, 0, 0.12), 0px 5px 20px 0px rgba(0, 0, 0, 0.3);
-
-
+    background-color: white;
+    color: rgba(20, 46, 68, 1);
     .end-buttons{
       position: fixed;
       right: 0;
