--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,10 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
     <div class="navlogo" [routerLink]="['/event-mgmt']">
-      <img src="assets/logo.png" width="40" height="30"/>
-      <div class="navlogo-text">
+      <img src="assets/logo2.png" width="40" height="30"/>
+      <!-- <div class="navlogo-text">
         Smart Event
-      </div>
+      </div> -->
     </div>
     <div class="sidediv" >
       <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Home</button>
@@ -46,7 +46,7 @@
 
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
+    <app-toolbar [pageName]=pageName></app-toolbar>
       <div class="page-container">
         <h3>Home</h3>
         <button mat-raised-button color="accent"  (click)='updateEventStatus("In-progress")'>Start Event</button>
