--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -17,6 +17,7 @@
     // background: linear-gradient(to bottom, #59D2FE,#44E5E7);
     // background: linear-gradient(to bottom, #59D2FE,#87F1FF,#60E1E0);
     background-image: url(assets/background.jpg);
+    background-size: cover;
     .card{
         margin: auto;
         width: 300px;
