--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,9 +2,6 @@
   <mat-sidenav mode="side" opened class="sidenav">
     <div class="navlogo" [routerLink]="['/event-mgmt']">
       <img src="assets/logo2.png" width="40" height="30"/>
-      <!-- <div class="navlogo-text">
-        Smart Event
-      </div> -->
     </div>
     <div class="sidediv" >
       <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Home</button>
@@ -47,16 +44,67 @@
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
     <app-toolbar [pageName]=pageName></app-toolbar>
-      <div class="page-container">
-        <h3>Home</h3>
-        <button mat-raised-button color="accent"  (click)='updateEventStatus("In-progress")'>Start Event</button>
-        <br><br>
-        <button mat-raised-button color="accent"  (click)='updateEventStatus("Completed")'>End Event</button>
-        <br><br>
-        <button mat-raised-button color="accent"  (click)='updateEventStatus("Not Started")'>Reset</button>
-        <br><br>
-        <button mat-raised-button color="accent" (click) = 'navigateHistoryPage()'>History</button>
+    <div class="cards">
+      <mat-card class="event-card" *ngIf="event">
+        <mat-card-header>
+          <mat-card-title class="event-card-title">
+            <div class="text">
+              {{event.eventName}}
+              </div>
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <mat-list>
+            <mat-list-item>
+              <mat-icon mat-list-icon class="card-icon">place</mat-icon>
+              <h4 mat-line class="card-info"> {{event.venue}}</h4>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-icon mat-list-icon class="card-icon">today</mat-icon>
+              <h4 mat-line class="card-info"> {{event.eventDate}}</h4>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-icon mat-list-icon class="card-icon">label</mat-icon>
+              <h4 mat-line class="card-info"> {{event.description}}</h4>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-icon mat-list-icon class="card-icon">event_available</mat-icon>
+              <h4 mat-line class="card-info"> {{event.status}}</h4>
 
+            </mat-list-item>
+          </mat-list>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button class="card-button" [routerLink]="['/',eventId,'schedule']">
+            <mat-icon>link</mat-icon>
+            Schedule
+          </button>
+          <button mat-button class="card-button" [routerLink]="['/',eventId,'map']">
+            <mat-icon>link</mat-icon>
+            Map
+          </button>
+          <button mat-button class="card-button" [routerLink]="['/',eventId,'attendees']">
+            <mat-icon>link</mat-icon>
+            Attendees
+          </button>
+        </mat-card-actions>
+      </mat-card>
+
+
+      <mat-list class="list-event-status">
+        <mat-list-item>
+          <h4 mat-line class="event-status-header">Change Event Status</h4>
+        </mat-list-item>
+        <mat-list-item class="list-action">
+          <button mat-raised-button class="list-button" (click)='updateEventStatus("In-progress")'>Start Event</button>
+        </mat-list-item>
+        <mat-list-item class="list-action">
+          <button mat-raised-button class="list-button"  (click)='updateEventStatus("Completed")'>End Event</button>
+        </mat-list-item>
+        <mat-list-item class="list-action">
+          <button mat-raised-button class="list-button"  (click)='updateEventStatus("Not Started")'>Reset</button>
+        </mat-list-item>
+      </mat-list>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
