--- a/src/cream-theme.scss
+++ b/src/cream-theme.scss
@@ -1,8 +1,8 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$cream-app-primary: mat-palette($mat-orange,500);
-$cream-app-accent:  mat-palette($mat-blue, 600);
+$cream-app-primary: mat-palette($mat-indigo,500);
+$cream-app-accent:  mat-palette($mat-deep-purple, 300);
 $cream-app-warn:    mat-palette($mat-red, 500);
 
 $cream-app-theme: mat-light-theme($cream-app-primary, $cream-app-accent, $cream-app-warn);
