--- a/src/app/components/booth-image/booth-image.component.scss
+++ b/src/app/components/booth-image/booth-image.component.scss
@@ -29,7 +29,7 @@
           border: 1px solid black;
           border-radius: 100%;
           text-align: center;
-          color: #FFEB3B;
+          color: red;
         }
       }
     }
