--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
   <div class="navlogo">
-    <img src="assets/logo.png" width="40" height="30"/>
+    <img src="assets/logo2.png" width="40" height="30"/>
     <div class="navlogo-text">
       Smart Event
     </div>
