--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
@@ -12,7 +12,7 @@
     width:100%;
     height: 2.4em;
     z-index:100;
-    background-color: #77878c;
+    background-color: rgba(20,46,68,0.95);
     color: white;
     box-shadow: 0px -20px 20px 0px rgba(0, 0, 0, 0.14), 0px -20px 20px 0px rgba(0, 0, 0, 0.12), 0px 5px 20px 0px rgba(0, 0, 0, 0.3);
 
@@ -20,9 +20,9 @@
       position: fixed;
       height: inherit;
       left: 0;
-      color: #335C67;
+      color: white;
       display: flex;
-      background-color: white;
+      background-color: rgba(20,46,68,0.95);
       img{
         margin: auto;
       }
@@ -30,7 +30,7 @@
         line-height: 2.4em;
         height: 2.4em;
         width: 8.5em;
-        color: #335C67;
+        color: white;
         text-align: center;
         margin: auto;
         font-weight: 700;
